# N4Sim

./: AXON.cpp  AXON.h  CORDINATE.cpp  CORDINATE.h  Event.cpp  Event.h  Input.txt  Interface.aps  Interface.vcxproj  Interface.vcxproj.filters  LAYER.cpp  LAYER.h  LUT.txt  Layer.txt  LayerProperty.cpp  LayerProperty.h  MyForm1.cpp  MyForm1.h  MyForm1.resx  NEURON.cpp  NEURON.h  Network.cpp  Network.h  NetworkProperty.cpp  NetworkProperty.h  NeuronProperty.cpp  NeuronProperty.h  Neuron_Cord.txt  OutEvent.cpp  OutEvent.h  Parameter Configurations.cpp  Parameter Configurations.h  README.md  SYNAPSE.cpp  SYNAPSE.h  Spike.cpp  Spike.h  ZoomPic.cpp  ZoomPic.h  resource.h
Run/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Interface.MyForm1.resources  Interface.exe.metagen  Output_7NerNet_IndContr.txt  Output_7NerNet_OverallContr.txt
code_files/: AXON.cpp  AXON.h  Ampa_weights1.txt  CMakeLists.txt  CORDINATE.cpp  CORDINATE.h  Data.m  Event.cpp  Event.h  EventLog.txt  Interface.vcxproj  Interface.vcxproj.filters  LAYER.cpp  LAYER.h  LayerProperty.cpp  LayerProperty.h  MyForm1.cpp  MyForm1.h  MyForm1.resx  Mymatrix.txt  NEURON.cpp  NEURON.h  Network.cpp  Network.h  NetworkProperty.cpp  NetworkProperty.h  NeuronProperty.cpp  NeuronProperty.h  Neuron_Cord.txt  OutEvent.cpp  OutEvent.h  OutNetwork.txt  Parameter Configurations.cpp  Parameter Configurations.h  SYNAPSE.cpp  SYNAPSE.h  Spike.cpp  Spike.h  ZoomPic.cpp  ZoomPic.h  (+2 more)
input_files/: Input.txt  LUT.txt  Layer.txt  Network.txt
run_files/: .NETFramework,Version=v4.6.1.AssemblyAttributes.asm  DataM.m  EventLog.txt  (+3 more)
(+1 files in other folders)
